[ G2/G3 ][ Design Bug Fix ] Reduce padding-right of has-children sub-menu link to tighten gap before acc-btn

--- a/_g3/assets/_scss/project/global-nav/_global-nav--design--sub-drop-btn.scss
+++ b/_g3/assets/_scss/project/global-nav/_global-nav--design--sub-drop-btn.scss
@@ -65,6 +65,7 @@ Original file path is themes/lightning/design-skin/foundation/ that, please modi
 		}
 		li.menu-item-has-children > a {
 			border-bottom: none;
+			padding-right: 0.5em;
 		}
 		li.menu-item-has-children > ul.sub-menu li:last-child > a {
 			border-bottom: none;
